// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postcss should should keep elements under the :global 1`] = `
".__content button {
    color: red;
}

.__button[aria-hidden] {
    opacity: 0;
}

.__button[disabled]._use--variant._use--variant_normal {
    background-color: gray;
}"
`;

exports[`postcss should should not transform keyframes 1`] = `
"@keyframes anim {
    from {
        transform: translateX(-10px);
    }
    to {
        transform: translateX(0);
    }
}"
`;

exports[`postcss should should not transform pseudo-classes like :nth-child 1`] = `
".__tr:nth-child(2n) {
    color: red;
}

:dir(rtl) {
    background-color: red;
}"
`;

exports[`postcss should transform the code 1`] = `
".__button {
    color: red;
}

.__button._disabled {
    color: grey;
}

.__button._type._type_submit {
    border: 1px solid red;
}"
`;

exports[`postcss should transform the code with namespaces 1`] = `
".__use--button,.__use--button {
    color: red;
}

.__button .__use--content,.__button .__use--content {
    font-weight: bold;
}

.__button._use--disabled,.__button._use--disabled {
    color: grey;
}

.__button._use--size._use--size_m,.__button._use--size._use--size_m {
    font-size: 14px;
}"
`;

exports[`postcss stats should transform the code with stats 1`] = `
"._type._type_submit {
    padding: 10px;
}

.__button {
    color: red;
}

.__button._disabled {
    color: grey;
}

.__button._type._type_submit {
    border: 1px solid red;
}

.__button._use--size._use--size_s {
    font-size: 14px;
}

@value __elements__: '{\\"__common__\\":{\\"mods\\":{},\\"props\\":{\\"type\\":[\\"submit\\"]}},\\"button\\":{\\"mods\\":{\\"use--size\\":[\\"s\\"]},\\"props\\":{\\"disabled\\":[\\"\\"],\\"type\\":[\\"submit\\"]}}}'"
`;
